--- a/PUIR_304b/localisation/newmodtext.csv
+++ b/PUIR_304b/localisation/newmodtext.csv
@@ -1,4 +1,4 @@
-demand_reperations_desc;Force another §Ycountry§W to pay reparations to us;Obliger un autre §Ypays§W à se désarmer et à nous verser des compensations;Zwischen Sie ein anderes §YLand§W zur Abrüstung und zu Reparationszahlungen an uns.;;Obligar a otro §Ypaís§W a desarmarse y que nos indemnice;;;;;;;;;x
-demand_reperations;Demand Reperations;Réduire;Weltgeltung reduzieren;;Reducir su tamaño;;;;;;;;;x
-demand_reperations_short;Make $RECIPIENT$ pay reperations;Réduire $RECIPIENT$;Weltgeltung von $RECIPIENT$ reduzieren;;Reducir el tamaño de $RECIPIENT$ ;;;;;;;;;x
-demand_reperations_setup;Make $RECIPIENT$ pay reperations;Réduire $RECIPIENT$;Reduzieren Sie die Weltgeltung von $RECIPIENT$.;;Reducir el tamaño de $RECIPIENT$ ;;;;;;;;;x
+demand_reperations_desc;Force another Â§YcountryÂ§W to pay reparations to us;Obliger un autre Â§YpaysÂ§W Ã  se dÃ©sarmer et Ã  nous verser des compensations;Zwischen Sie ein anderes Â§YLandÂ§W zur AbrÃ¼stung und zu Reparationszahlungen an uns.;;Obligar a otro Â§YpaÃ­sÂ§W a desarmarse y que nos indemnice;;;;;;;;;x
+demand_reperations;Demand Reparations;RÃ©duire;Weltgeltung reduzieren;;Reducir su tamaÃ±o;;;;;;;;;x
+demand_reperations_short;Make $RECIPIENT$ pay reparations;RÃ©duire $RECIPIENT$;Weltgeltung von $RECIPIENT$ reduzieren;;Reducir el tamaÃ±o de $RECIPIENT$ ;;;;;;;;;x
+demand_reperations_setup;Make $RECIPIENT$ pay reparations;RÃ©duire $RECIPIENT$;Reduzieren Sie die Weltgeltung von $RECIPIENT$.;;Reducir el tamaÃ±o de $RECIPIENT$ ;;;;;;;;;x
