--- a/icen_PUIR/localisation/newmodtext.csv
+++ b/icen_PUIR/localisation/newmodtext.csv
@@ -11,3 +11,6 @@ Bonus_Immigration;Bonus Immigration;;;;;;;;;;;;;
 Bonus_Immigration_desc;This country is a target for immigration. It should expect more immigrants than comparable countries.;;;;;;;;;;;;;
 Hazardous_Journey;Hazardous Journey;;;;;;;;;;;;;
 Hazardous_Journey_desc;To reach this country requires a hazardous Journey which few people is willing to take. As a result, this nation should expect fewer immigrants than comparable countries.;;;;;;;;;;;;;
+EVTNAME999100;Cape Horn;;;;;;;;;;;;;x
+EVTDESC999100;Our country is located on the wrong side of the Andes Mountains, which means that for migrants from europe to be able to reach our shores, they will need to traverse the treacherous Cape Horn. The waters around Cape Horn are particularly hazardous, owing to strong winds, large waves, strong currents and icebergs. These dangers have made it notorious as a sailors graveyard. For theese reasons, we should not expect many migrants will journey to our country.;;;;;;;;;;;;;x
+EVTOPTA999100;We will prosper regardless!;;;;;;;;;;;;;x
