--- a/icen_PUIR/localisation/00_PDM_gtfo.csv
+++ b/icen_PUIR/localisation/00_PDM_gtfo.csv
@@ -912,3 +912,5 @@ gtfo_CHI_title;Grant China Independence;;;;;;;;;;;;x,,
 gtfo_CHI_desc;We've had a good run, but it's time to end our rulership of China: if you love something, let it go!;;;;;;;;;;;;x
 gtfo_QNG_title;Grant Qing Independence;;;;;;;;;;;;x,,
 gtfo_QNG_desc;We've had a good run, but it's time to end our rulership of Qing: if you love something, let it go!;;;;;;;;;;;;x
+gtfo_BNG_title;Grant Bengal Independence;;;;;;;;;;;;x,,
+gtfo_BNG_desc;We've had a good run, but it's time to end our rulership of Bengal: if you love something, let it go!;;;;;;;;;;;;x
