Siebenbürgen release text

--- a/icen_PUIR/localisation/00_PDM_gtfo.csv
+++ b/icen_PUIR/localisation/00_PDM_gtfo.csv
@@ -914,3 +914,5 @@ gtfo_QNG_title;Grant Qing Independence;;;;;;;;;;;;x,,
 gtfo_QNG_desc;We've had a good run, but it's time to end our rulership of Qing: if you love something, let it go!;;;;;;;;;;;;x
 gtfo_BNG_title;Grant Bengal Independence;;;;;;;;;;;;x,,
 gtfo_BNG_desc;We've had a good run, but it's time to end our rulership of Bengal: if you love something, let it go!;;;;;;;;;;;;x
+gtfo_SIE_title;Grant Siebenbürgen Independence;;;;;;;;;;;;
+gtfo_SIE_desc;We've had a good run, but it's time to end our rulership of Siebenbürgen: if you love something, let it go!;;;;;;;;;;;;
