--- a/icen_PUIR/localisation/newmodtext.csv
+++ b/icen_PUIR/localisation/newmodtext.csv
@@ -14,3 +14,5 @@ Hazardous_Journey_desc;To reach this country requires a hazardous Journey which 
 EVTNAME999100;Cape Horn;;;;;;;;;;;;;x
 EVTDESC999100;Our country is located on the wrong side of the Andes Mountains, which means that for migrants from europe to be able to reach our shores, they will need to traverse the treacherous Cape Horn. The waters around Cape Horn are particularly hazardous, owing to strong winds, large waves, strong currents and icebergs. These dangers have made it notorious as a sailors graveyard. For theese reasons, we should not expect many migrants will journey to our country.;;;;;;;;;;;;;x
 EVTOPTA999100;We will prosper regardless!;;;;;;;;;;;;;x
+the_gibraltar_question_title;Claim Gibraltar;;;;;;;;;;;;;x
+the_gibraltar_question_desc;Ever since Gibraltar was lost to the British, Spain has made numerous attempts to regain it. With new nationalist sentiments sweeping the world, and Spain’s superior position as a great power, perhaps it is once again time to make it clear that Gibraltar is vital for Spanish territorial integrity, and its sovereignty should reflect this fact!;;;;;;;;;;;;;x
