--- a/icen_PUIR/localisation/newmodtext.csv
+++ b/icen_PUIR/localisation/newmodtext.csv
@@ -16,5 +16,5 @@ EVTDESC999100;Our country is located on the wrong side of the Andes Mountains, w
 EVTOPTA999100;We will prosper regardless!;;;;;;;;;;;;;x
 the_gibraltar_question_title;Claim Gibraltar;;;;;;;;;;;;;x
 the_gibraltar_question_desc;Ever since Gibraltar was lost to the British, Spain has made numerous attempts to regain it. With new nationalist sentiments sweeping the world, and Spain’s superior position as a great power, perhaps it is once again time to make it clear that Gibraltar is vital for Spanish territorial integrity, and its sovereignty should reflect this fact!;;;;;;;;;;;;;x
-gibraltar_of_paraguay_title;Build Humaitá Fortress;;;;;;;;;;;;;
-gibraltar_of_paraguay_desc;Near the mouth of the Paraguay river, there is a sharp bend. A strategic site without equal in the region, building a fortress here would allow us to control all passage in and out of our country, and even Mato Grosso. We will build a fortress the likes of which have never been seen in South America, and one day it will be known as the Gibraltar of South America.;;;;;;;;;;;;;
+gibraltar_of_paraguay_title;Build Humaitá Fortress;;;;;;;;;;;;;x
+gibraltar_of_paraguay_desc;Near the mouth of the Paraguay river, there is a sharp bend. A strategic site without equal in the region, building a fortress here would allow us to control all passage in and out of our country, and even Mato Grosso. We will build a fortress the likes of which have never been seen in South America, and one day it will be known as the Gibraltar of South America.;;;;;;;;;;;;;x
